--- a/stylesheets/styles.less
+++ b/stylesheets/styles.less
@@ -13,6 +13,16 @@ body {
 	
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+	margin-bottom: 20px;
+}
+
 .navbar {
 	.brand {
 		img {
@@ -25,14 +35,14 @@ body {
 
 header {
 	position: relative;
-	padding-top: 120px;
-	padding-bottom: 100px;
+	padding-top: 60px;
+	padding-bottom: 40px;
 	background-color: #eee;
 	border-bottom: solid 1px #e4e4e4;
 
 	.hero-img {
 		position: relative;
-		bottom: -100px;
+		bottom: -40px;
 	}
 	
 }
@@ -50,9 +60,12 @@ footer {
 
 @media (min-width: @screen-lg) { 
 	header {
+		padding-top: 120px;
+		padding-bottom: 100px;
+
 		.hero-img {
 			position: absolute;
-			bottom: -387px;
+			bottom: -367px;
 		}
 	}
 }
