Updated blog design

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -11,45 +11,12 @@
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/stylesheets/pygment_trac.css">
 	<link rel="stylesheet" href="/stylesheets/styles.min.css">
-	<style>
-		.blogheader h1 {
-			color: #ccc;
-			text-shadow: 0 1px 0 #f4f4f4;
-		}
-
-		.heroimg {
-			margin-top: 80px;
-		}
-
-		.post-preview a.header {
-			color: #333;
-		}
-
-		.post-preview a.header:hover {
-			color: #666;
-			text-decoration: none;
-		}
-
-		.post,
-		.post-preview {
-			margin-top: 80px;
-		}
-
-		.post-preview,
-		.social {
-			margin-bottom: 80px;
-		}
-
-		.social {
-			margin-top: 20px;
-		}
-	</style>
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<!--[if lt IE 9]>
 		<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
 </head>
-	<body data-spy="scroll" data-target=".nav.navbar-nav" data-offset="60">
+	<body data-spy="scroll" data-target=".nav.navbar-nav" data-offset="60" class="blog">
 		<div class="wrapper">
 			{% include header.html %}
 			<header class="blogheader">
