--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/#about">About</a></li>
 				<li><a href="/#features">Features</a></li>
+				<li><a href="/blog/">Blog</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div>
