--- a/stylesheets/less/blog.less
+++ b/stylesheets/less/blog.less
@@ -22,6 +22,10 @@
 	.heroimg {
 		margin-top: 20px;
 	}
+	
+	.post {
+		margin-top: 20px;
+	}
 
 	@media (min-width: @screen-lg) { 
 		.blogheader {
