--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
 				<li><a href="/#about">About</a></li>
 				<li><a href="/#features">Features</a></li>
 				<li><a href="/blog/">Blog</a></li>
+				<li><a href="https://chrome.google.com/webstore/detail/notely/blbcibeljnikjlegmkfmajmgjkpdndhk">Download</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
 	</div>
