--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,13 @@
 				<li><a href="/#about">About</a></li>
 				<li><a href="/#features">Features</a></li>
 				<li><a href="/blog/">Blog</a></li>
+				<li class="dropdown">
+					<a href="#" data-toggle="dropdown">Support <b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><a href="https://github.com/notely/notely-chrome/wiki">Wiki</a></li>
+						<li><a href="https://github.com/notely/notely-chrome/issues">Issues</a></li>
+					</ul>
+				</li>
 				<li><a href="https://chrome.google.com/webstore/detail/notely/blbcibeljnikjlegmkfmajmgjkpdndhk">Download</a></li>
 			</ul>
 		</div><!-- /.navbar-collapse -->
