--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -5,8 +5,8 @@
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<title>{{ page.title }}</title>
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed/feed.xml">
-	<link rel="shortcut icon" href="{{ site.url }}/images/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="{{ site.url }}/images/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
 
 	<!-- <link rel="stylesheet" href="stylesheets/styles.css"> -->
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
