--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="chrome=1">
 	<title>{{ page.title }}</title>
-	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.url }}/feed/feed.xml">
+	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="http://feedpress.me/notely">
 	<link rel="shortcut icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="{{ site.url }}/favicon.ico" type="image/x-icon">
 
