--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="/#about">About</a></li>
 				<li><a href="/#features">Features</a></li>
-				<li><a href="/blog/">Blog</a></li>
+				<!--li><a href="/blog/">Blog</a></li-->
 				<li class="dropdown">
 					<a href="#" data-toggle="dropdown">Support <b class="caret"></b></a>
 					<ul class="dropdown-menu">
